--- a/01_krajobraz_uczenia maszynowego.ipynb
+++ b/01_krajobraz_uczenia maszynowego.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "[224 rows x 4 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "26   United States                6.9             60235.728492"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "<Axes: xlabel='PKB na mieszkańca (USD)', ylabel='Satysfakcja życia'>"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "37655.1803457421"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "6.301656332738056"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -659,10 +659,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[6.33333333]])"
+       "6.333333333333333"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "model_knn = KNeighborsRegressor(n_neighbors=3)  \n",
     "model_knn.fit(X, y)\n",
-    "model_knn.predict([[cyprus_gdp_per_capita]])"
+    "model_knn.predict([[cyprus_gdp_per_capita]])[0,0]"
    ]
   },
   {
